--- a/docs-2.0/nebula-dashboard-ent/3.connect-dashboard.md
+++ b/docs-2.0/nebula-dashboard-ent/3.connect-dashboard.md
@@ -14,7 +14,7 @@ After Dashboard is deployed, you can log in and use Dashboard on the browser.
 
   If the following login interface is shown in the browser, then you have successfully deployed and started Dashboard.
 
-  ![dashboard-login-cn](https://docs-cdn.nebula-graph.com.cn/figures/login_20220909_en.png)
+  <img src="https://docs-cdn.nebula-graph.com.cn/figures/eo_dash_login_230913_en.png" width="1200" alt="A screenshot that shows the login UI of dashboard">
 
   !!! note
 
