--- a/docs-2.0/nebula-dashboard/4.use-dashboard.md
+++ b/docs-2.0/nebula-dashboard/4.use-dashboard.md
@@ -4,7 +4,7 @@ NebulaGraph Dashboard consists of three parts: Machine, Service, and Management.
 
 ## Overview
 
-![Overview](https://docs-cdn.nebula-graph.com.cn/figures/overview1-221103-en.png)
+<img src="https://docs-cdn.nebula-graph.com.cn/figures/c_dash_overview_230912_en.png" width="1200" alt="A screenshot that shows the overview of dashboard">
 
 ## Machine
 
@@ -18,7 +18,7 @@ On this page, you can view the variation of CPU, Memory, Load, Disk, and Network
 - To set a base line, click the ![setup](https://docs-cdn.nebula-graph.com.cn/figures/Setup.png) button.
 - To view the detailed monitoring information, click the ![watch](https://docs-cdn.nebula-graph.com.cn/figures/watch.png) button. In this example, select `Load` for details. The figure is as follows.
 
-    ![load](https://docs-cdn.nebula-graph.com.cn/figures/ds-load-220913-en.png)
+    <img src="https://docs-cdn.nebula-graph.com.cn/figures/c_dash_load_230912_en.png" width="1000" alt="A screenshot that shows the load of dashboard">
 
   - You can set the monitoring time range, instance, update frequency and base line.
   - You can search for or select the target metric. For details about monitoring metrics, see [Metrics](6.monitor-parameter.md).
@@ -41,7 +41,7 @@ On this page, you can view the information of Graph, Meta, and Storage services 
 - You can view the status of all the services in a cluster.
 - To view the detailed monitoring information, click the ![watch](https://docs-cdn.nebula-graph.com.cn/figures/watch.png) button. In this example, select `Graph` for details. The figure is as follows.
 
-   ![service](https://docs-cdn.nebula-graph.com.cn/figures/ds-graph-220913-en.png)
+   <img src="https://docs-cdn.nebula-graph.com.cn/figures/c_dash_graph_230912_en.png" width="1000" alt="A screenshot that shows the graph service of dashboard">
 
   - You can set the monitoring time range, instance, update frequency, period, aggregation and base line.
   - You can search for or select the target metric. For details of monitoring metrics, see [Monitor parameter](6.monitor-parameter.md).
@@ -73,7 +73,7 @@ For information about the space graph metrics, see [Graph space](6.monitor-param
 
 On the **Overview Info** page, you can see the information of the NebulaGraph cluster, including Storage leader distribution, Storage service details, versions and hosts information of each NebulaGraph service, and partition distribution and details.
 
-![coreinfo](https://docs-cdn.nebula-graph.com.cn/figures/clustercore-info_2022-04-11_en.png)
+<img src="https://docs-cdn.nebula-graph.com.cn/figures/c_dash_info_230912_en.png" width="1000" alt="A screenshot that shows the cluster information of dashboard">
 
 #### Storage Leader Distribution
 
