--- a/docs-2.0/nebula-explorer/db-management/11.import-data.md
+++ b/docs-2.0/nebula-explorer/db-management/11.import-data.md
@@ -56,7 +56,7 @@ Click **New Data Source** in the upper right corner of the page to set the data 
 
   - **Map Edges**: Same operation as map tags.
 
-  ![import](https://docs-cdn.nebula-graph.com.cn/figures/explorer_import_230830.png)
+  <img src="https://docs-cdn.nebula-graph.com.cn/figures/eo_expl_import_230913_en.png" width="1000" alt="A screenshot that shows the import of explorer">
 
 2. After completing the settings, click **Import**, enter the password for the NebulaGraph account, and confirm.
 
