--- a/docs-2.0/nebula-explorer/workflow/1.prepare-resources.md
+++ b/docs-2.0/nebula-explorer/workflow/1.prepare-resources.md
@@ -16,7 +16,7 @@ You must prepare your environment for running a workflow, including NebulaGraph 
 
 3. Configure the following resources.
 
-  ![workflow_configuration](https://docs-cdn.nebula-graph.com.cn/figures/workflow_configuration_230424_en.png)
+  <img src="https://docs-cdn.nebula-graph.com.cn/figures/eo_expl_workflowConfig_230913_en.png" width="1200" alt="A screenshot that shows the workflow configuration of explorer">
 
   - NebulaGraph configuration
 
