--- a/docs-2.0/5.configurations-and-logs/1.configurations/3.graph-config.md
+++ b/docs-2.0/5.configurations-and-logs/1.configurations/3.graph-config.md
@@ -197,7 +197,7 @@ For more information about audit log, see [Audit log](../2.log-management/audit-
 | Name                              | Default Value | Description                                                                                                                             | Runtime Dynamic Modification Supported |
 | :-------------------------------- | :------------ | :-------------------------------------------------------------------------------------------------------------------------------------- | :------------------------------------- |
 | `assigned_zone`                   | Empty         | When the Zone feature is enabled, set an existing Zone name for directed access. See [Managing Zones](../../4.deployment-and-installation/5.zone.md) for details. | No                                    |
-| `prioritize_intra_zone_reading`   | `false`       | When set to `true` and a Zone is specified in `assigned_zone`, it will prioritize reading replica data within that Zone. If no data is available in that Zone, it will decide based on `stick_to_intra_zone_on_failure` whether to read data from other Zones.<br/>When set to `false`, it will read from the leader replicas. | No                                    |
-| `stick_to_intra_zone_on_failure`  | `false`       | When set to `true`, if there's no data in the Zone specified in `assigned_zone`, it won't read data from other Zones.<br/>When set to `false`, it will read from the leader replicas. | No                                    |
+| `prioritize_intra_zone_reading`   | `false`       | When set to `true` and a Zone is specified in `assigned_zone`, it will prioritize reading replica data within that Zone. If reading fails in that Zone, it will decide based on `stick_to_intra_zone_on_failure` whether to read data from other Zones.<br/>When set to `false`, it will read from the leader partition replicas. | No                                    |
+| `stick_to_intra_zone_on_failure`  | `false`       | When set to `true`, if reading fails in the Zone specified in `assigned_zone`, it won't read data from other Zones.<br/>When set to `false`, it reads the leader partition replica across zones. | No                                    |
 
 {{ ent.ent_end }}
