fixed missing installation step

--- a/docs-2.0/nebula-operator/3.deploy-nebula-graph-cluster/3.2create-cluster-with-helm.md
+++ b/docs-2.0/nebula-operator/3.deploy-nebula-graph-cluster/3.2create-cluster-with-helm.md
@@ -60,6 +60,8 @@
   - `DOCKER_USER`: The username for the image repository.
   - `DOCKER_PASSWORD`: The password for the image repository.
 
+  {{ent.ent_end}}
+
 6. Apply the variables to the Helm chart to create a NebulaGraph cluster.
 
   ```bash
