--- a/docs-2.0/3.ngql-guide/4.job-statements.md
+++ b/docs-2.0/3.ngql-guide/4.job-statements.md
@@ -68,7 +68,7 @@ For example:
 
 ```ngql
 # Balance partition replicas within each Zone in the current space.
-nebula> SUBMIT JOB BALANCE IN ZONE;
+nebula> SUBMIT JOB BALANCE DATA IN ZONE;
 +------------+
 | New Job Id |
 +------------+
@@ -78,7 +78,7 @@ nebula> SUBMIT JOB BALANCE IN ZONE;
 
 <!-- ```ngql
 # Balance partition replicas within a specified Zone.
-nebula> SUBMIT JOB BALANCE IN ZONE az1;
+nebula> SUBMIT JOB BALANCE DATA IN ZONE az1;
 +------------+
 | New Job Id |
 +------------+
@@ -100,7 +100,7 @@ For example:
 
 ```ngql
 # Clear the partitions on the specified Storage nodes. 
-nebula> SUBMIT JOB BALANCE IN ZONE REMOVE 192.168.10.101:9779,192.168.10.102:9779;
+nebula> SUBMIT JOB BALANCE DATA IN ZONE REMOVE 192.168.10.101:9779,192.168.10.102:9779;
 +------------+
 | New Job Id |
 +------------+
@@ -126,14 +126,14 @@ nebula> SUBMIT JOB BALANCE LEADER;
 ```
 
 <!-- balance-3.1
-## SUBMIT JOB BALANCE IN ZONE
+## SUBMIT JOB BALANCE DATA IN ZONE
 
-The `SUBMIT JOB BALANCE IN ZONE` statement starts a job to balance the distribution of storage partitions in each zone in the current graph space. It returns the job ID. You can use the `REMOVE` option to specify the Storage services that you want to clear for easy maintenance.
+The `SUBMIT JOB BALANCE DATA IN ZONE` statement starts a job to balance the distribution of storage partitions in each zone in the current graph space. It returns the job ID. You can use the `REMOVE` option to specify the Storage services that you want to clear for easy maintenance.
 
 For example:
 
 ```ngql
-nebula> SUBMIT JOB BALANCE IN ZONE REMOVE 192.168.10.102:9779;
+nebula> SUBMIT JOB BALANCE DATA IN ZONE REMOVE 192.168.10.102:9779;
 +------------+
 | New Job Id |
 +------------+
