--- a/docs-2.0/2.quick-start/6.cheatsheet-for-ngql.md
+++ b/docs-2.0/2.quick-start/6.cheatsheet-for-ngql.md
@@ -437,7 +437,7 @@
   |`BALANCE LEADER`| Starts a job to balance the distribution of all the storage leaders in graph spaces. It returns the job ID.|
   |`BALANCE DATA`| Starts a job to balance the distribution of all the storage partitions in graph spaces. It returns the job ID. **For enterprise edition only.**|
   |`BALANCE DATA REMOVE <ip:port> [,<ip>:<port> ...]`| Starts a job to migrate the specified storage partitions. The default port is `9779`. **For enterprise edition only.**|
-  |`BALANCE IN ZONE [REMOVE <ip>:<port> [,<ip>:<port> ...]]`| Starts a job to balance the distribution of storage partitions in each zone in the current graph space. It returns the job ID. You can use the `REMOVE` option to specify the partitions of storage services that you want to migrate to other storage services. **For enterprise edition only.**| 
+  |`BALANCE DATA IN ZONE [REMOVE <ip>:<port> [,<ip>:<port> ...]]`| Starts a job to balance the distribution of storage partitions in each zone in the current graph space. It returns the job ID. You can use the `REMOVE` option to specify the partitions of storage services that you want to migrate to other storage services. **For enterprise edition only.**| 
 
 
 * [Job statements](../3.ngql-guide/4.job-statements.md)
@@ -447,6 +447,7 @@
   | `SUBMIT JOB COMPACT` | Triggers the long-term RocksDB `compact` operation.                       |
   | `SUBMIT JOB FLUSH`   | Writes the RocksDB memfile in the memory to the hard disk.                          |
   | `SUBMIT JOB STATS`   | Starts a job that makes the statistics of the current graph space. Once this job succeeds, you can use the `SHOW STATS` statement to list the statistics. |
+  | `SUBMIT JOB BALANCE DATA IN ZONE`| Starts a job to balance partition replicas within each Zone. **For enterprise edition only.**|
   | `SHOW JOB <job_id>`  | Shows the information about a specific job and all its tasks in the current graph space. The Meta Service parses a `SUBMIT JOB` request into multiple tasks and assigns them to the nebula-storaged processes. |
   | `SHOW JOBS`          | Lists all the unexpired jobs in the current graph space.                           |
   | `STOP JOB`           | Stops jobs that are not finished in the current graph space.                               |
