--- a/docs-2.0/4.deployment-and-installation/5.zone.md
+++ b/docs-2.0/4.deployment-and-installation/5.zone.md
@@ -20,11 +20,11 @@ Taking the following picture as an example, when creating a graph space (S1), th
 
 <img src="https://docs-cdn.nebula-graph.com.cn/figures/core_zone_230913.png" width="800" alt="example_for_zones">
 
-To reduce cost of cross-Zone network traffic, and increase data transfer speed (Intra-zone network usually has a lower latency than inter-zone network), you can configure the Graph service to prioritize intra zone data access. Each Graphd will then prioritize to access the partition replica in the same zone as specified by Graphd if there is any. As an example, suppose Graph A and Graph B are located in zone1, Graph C and Graph D are in zone2, and Graph E is in zone3. You can configure Graph A and Graph B to prioritize accessing data in zone1, Graph C and Graph D to prioritize accessing data in zone2, and Graph E to prioritize accessing data in zone3. This helps reduce the cost of cross-zone network traffic and improves data transfer speed.
+To reduce cost of cross-Zone network traffic, and increase data transfer speed (Intra-zone network usually has a lower latency than inter-zone network), you can configure the Graph service to prioritize intra-zone data access. Each Graphd will then prioritize to access the partition replica in the same zone as specified by Graphd if there is any. As an example, suppose Graph A and Graph B are located in zone1, Graph C and Graph D are in zone2, and Graph E is in zone3. You can configure Graph A and Graph B to prioritize accessing data in zone1, Graph C and Graph D to prioritize accessing data in zone2, and Graph E to prioritize accessing data in zone3. This helps reduce the cost of cross-zone network traffic and improves data transfer speed.
 
 <img src="https://docs-cdn.nebula-graph.com.cn/figures/core_intra_zone_20230913.png" width="800" alt="example_for_intra_zone">
 
-In cases where data retrieval fails due to a Storage node failure in a specific zone, you can configure the Graph service to read leader replica data across zones to ensure data availability. For instance, if machine B experiences a failure, causing Graph A to be unable to read the Follower replica data of Part3 in zone1, you can configure Graph A to read the Leader replica data of Part3 in zone3, thus ensuring data availability.
+In cases where data retrieval fails due to a Storage node failure in a specific Zone, you can configure the Graph service to read leader replica data across zones to ensure data availability. For instance, if machine B experiences a failure, causing Graph A to be unable to read the Follower replica data of Part3 in zone1, you can configure Graph A to read the Leader replica data of Part3 in zone3, thus ensuring data availability.
 
 <img src="https://docs-cdn.nebula-graph.com.cn/figures/core_intra_zone2_20230913.png" width="800" alt="example_for_intra_zone">
 
@@ -184,7 +184,7 @@ For example:
 
 ```ngql
 nebula> USE my_space_1;
-nebula> BALANCE IN ZONE;
+nebula> BALANCE DATA IN ZONE;
 ```
 
 ### Migrate partitions from the Storage nodes in the specified Zones to other Storage nodes 
@@ -203,7 +203,7 @@ For example:
 
 ```ngql
 nebula> USE my_space_1;
-nebula> BALANCE IN ZONE REMOVE 192.168.8.111:9779;
+nebula> BALANCE DATA IN ZONE REMOVE 192.168.8.111:9779;
 +------------+
 | New Job Id |
 +------------+
