--- a/docs-2.0/4.deployment-and-installation/5.zone.md
+++ b/docs-2.0/4.deployment-and-installation/5.zone.md
@@ -24,9 +24,10 @@ To reduce cost of cross-Zone network traffic, and increase data transfer speed (
 
 <img src="https://docs-cdn.nebula-graph.com.cn/figures/core_intra_zone_20230913.png" width="800" alt="example_for_intra_zone">
 
+<!-- To be released next version 
 In cases where data retrieval fails due to a Storage node failure in a specific Zone, you can configure the Graph service to read leader replica data across zones to ensure data availability. For instance, if machine B experiences a failure, causing Graph A to be unable to read the Follower replica data of Part3 in zone1, you can configure Graph A to read the Leader replica data of Part3 in zone3, thus ensuring data availability.
 
-<img src="https://docs-cdn.nebula-graph.com.cn/figures/core_intra_zone2_20230913.png" width="800" alt="example_for_intra_zone">
+<img src="https://docs-cdn.nebula-graph.com.cn/figures/core_intra_zone2_20230913.png" width="800" alt="example_for_intra_zone"> -->
 
 ## Scenarios
 
