--- a/docs-2.0/nebula-operator/3.deploy-nebula-graph-cluster/3.2create-cluster-with-helm.md
+++ b/docs-2.0/nebula-operator/3.deploy-nebula-graph-cluster/3.2create-cluster-with-helm.md
@@ -72,7 +72,7 @@
       --set nebula.version=v{{nebula.release}} \  
       # Specify the version of the nebula-cluster chart. If not specified, the latest version of the chart is installed by default.  
       # Run 'helm search repo nebula-operator/nebula-cluster' to view the available versions of the chart.   
-      --version={{operator.release}} 
+      --version={{operator.release}} \
       --namespace="${NEBULA_CLUSTER_NAMESPACE}" \
   ```
 
