--- a/docs-2.0/nebula-operator/3.deploy-nebula-graph-cluster/3.1create-cluster-with-kubectl.md
+++ b/docs-2.0/nebula-operator/3.deploy-nebula-graph-cluster/3.1create-cluster-with-kubectl.md
@@ -107,38 +107,8 @@ The following example shows how to create a NebulaGraph cluster by creating a cl
     === "Cluster with Zones"
 
         NebulaGraph Operator supports creating a cluster with [Zones](../../4.deployment-and-installation/5.zone.md). 
-
-        ???+ note "Learn more about Zones in NebulaGraph Operator"
         
-            Each Zone is a logical group of Storage pods and Graph pods and stores complete graph space data. NebulaGraph space data is partitioned and partition replicas are evenly distributed across all zones. Then, by assigning the Graph service for intra-Zone data access, you can reduce the cost of inter-Zone network traffic, and increase data transfer speed.
-
-            To use the Zone feature, you must first know the actual zone information where your cluster nodes are located (nodes deployed on cloud platforms generally have zone node labels). After that, add the zone information by setting the `spec.metad.config.zone_list` parameter to a list of Zone names, split by comma, in the cluster configuration file. **Make sure that the Zone names are consistent with the actual zone names where the nodes are located.** For example, if the nodes are located in `az1`, `az2`, and `az3`, you can set the `spec.metad.config.zone_list` parameter to `az1,az2,az3`.
-            
-            ```yaml
-            spec:
-              metad:
-                config:
-                  zone_list: az1,az2,az3        
-            ```
-
-            NebulaGraph Operator uses the [TopoloySpread](https://kubernetes.io/docs/concepts/workloads/pods/pod-topology-spread-constraints/) feature of Kubernetes to control the scheduling of Storage or Graph pods. After `zone_list` is configured, the Storage services are added to a Zone after getting the Zone name by the `topology.kubernetes.io/zone` label.
-            
-            Whereas, to implement the intra-zone data access, the Graph service assigns itself to a Zone using `--assigned_zone=$NODE_ZONE` after recognizing the Zone name of the node where the Graph service is located by using an init-container to get the Zone name. NebulaGraph Operator uses `spec.alpineImage` to specify the Alpine Linux image used to obtain the Zone information where nodes are located. The default value is `reg.vesoft-inc.com/nebula-alpine:latest`. By adding the `spec.graphd.config.prioritize_intra_zone_reading` to `true` in the cluster configuration file, the Graph service prioritizes sending queries to the Storage services in the same Zone as the Graph service. If reading fails in that Zone, it decides based on `spec.graphd.config.stick_to_intra_zone_on_failure` whether to read the leader partition replica data across Zones. If `spec.graphd.config.stick_to_intra_zone_on_failure` is set to `true`, the Graph service does not read data from other Zones and returns an error. Otherwise, it reads the leader partition replica data from other Zones.
-
-            ```yaml
-            spec:
-              alpineImage: reg.vesoft-inc.com/cloud-dev/nebula-alpine:latest
-              graphd:
-                config:
-                  prioritize_intra_zone_reading: "true"
-                  stick_to_intra_zone_on_failure: "true"
-            ```
-            
-            After Storage and Graph services are assigned to Zones, the mapping between the Storage or Graph pod and the Zone is written to configmap named `nebula-graphd|storaged-zone`. Based on the mapping, pod scheduling back to the original Zones is supported during rolling updates and pod restarts.
-
-        
-        You should set the following parameters for creating a cluster with Zones are as follows. Other parameters can be changed as needed. For more information on other parameters, see the [sample configuration](https://github.com/vesoft-inc/nebula-operator/blob/v{{operator.release}}/config/samples/apps_v1alpha1_nebulacluster.yaml). 
-
+        You must set the following parameters for creating a cluster with Zones. Other parameters can be changed as needed. For more information on other parameters, see the [sample configuration](https://github.com/vesoft-inc/nebula-operator/blob/v{{operator.release}}/config/samples/apps_v1alpha1_nebulacluster.yaml). 
 
         | Parameter    | Default value  | Description    |
         | :---- | :--- | :--- |
@@ -150,32 +120,107 @@ The following example shows how to create a NebulaGraph cluster by creating a cl
         |`spec.graphd.config.prioritize_intra_zone_reading`|`false`|Specifies whether to prioritize sending queries to the storage nodes in the same zone.<br/>When set to `true`, the query is sent to the storage nodes in the same zone. If reading fails in that Zone, it will decide based on `stick_to_intra_zone_on_failure` whether to read the leader partition replica data from other Zones. |
         |`spec.graphd.config.stick_to_intra_zone_on_failure`|`false`|Specifies whether to stick to intra-zone routing if unable to read the requested partitions in the same zone. When set to `true`, if reading fails in that Zone, it does not read data from other Zones.|
 
-        Part of the sample configuration:
+        ???+ note "Learn more about Zones in NebulaGraph Operator"
 
-        ```yaml
-        apiVersion: apps.nebula-graph.io/v1alpha1
-        kind: NebulaCluster
-        metadata:
-          name: nebula
-          namespace: default
-        spec:
-          # Alpine image built with linux tools.
-          alpineImage: "reg.vesoft-inc.com/nebula-alpine:latest"
-          graphd:
-            config:
-              # Prioritize sending queries to the storage nodes in the same zone.
-              prioritize_intra_zone_reading: "true"
-              # Stick to intra-zone routing if unable to
-              # find the requested part in the zone when set to true.
-              stick_to_intra_zone_on_failure: "true"
-            ...
-          metad:
-            config:
-              # A list of zones, split by comma
-              zone_list: az1,az2,az3
-            licenseManagerURL: "192.168.8.53:9119"
-            ...  
-        ```
+            **Understanding NebulaGraph's Zone Feature**
+
+            NebulaGraph utilizes a feature called Zones to efficiently manage its distributed architecture. Each Zone represents a logical grouping of Storage pods and Graph pods, responsible for storing the complete graph space data. The data within NebulaGraph's spaces is partitioned, and replicas of these partitions are evenly distributed across all available Zones. The utilization of Zones can significantly reduce inter-Zone network traffic costs and boost data transfer speeds.
+
+            **Configuring NebulaGraph Zones**
+
+            To make the most of the Zone feature, you first need to determine the actual Zone where your cluster nodes are located. Typically, nodes deployed on cloud platforms are labeled with their respective Zones. Once you have this information, you can configure it in your cluster's configuration file by setting the `spec.metad.config.zone_list` parameter. This parameter should be a list of Zone names, separated by commas, and should match the actual Zone names where your nodes are located. For example, if your nodes are in Zones `az1`, `az2`, and `az3`, your configuration would look like this:
+
+            ```yaml
+            spec:
+              metad:
+                config:
+                  zone_list: az1,az2,az3
+            ```
+
+            **Operator's Use of Zone Information**
+
+            NebulaGraph Operator leverages Kubernetes' [TopoloySpread](https://kubernetes.io/docs/concepts/workloads/pods/pod-topology-spread-constraints/) feature to manage the scheduling of Storage and Graph pods. Once the `zone_list` is configured, Storage services are automatically assigned to their respective Zones based on the `topology.kubernetes.io/zone` label.
+
+            For intra-zone data access, the Graph service dynamically assigns itself to a Zone using the `--assigned_zone=$NODE_ZONE` parameter. It identifies the Zone name of the node where the Graph service resides by utilizing an init-container to fetch this information. The Alpine Linux image specified in `spec.alpineImage` (default: `reg.vesoft-inc.com/nebula-alpine:latest`) plays a role in obtaining Zone information.
+
+            **Prioritizing Intra-Zone Data Access**
+
+            By setting `spec.graphd.config.prioritize_intra_zone_reading` to `true` in the cluster configuration file, you enable the Graph service to prioritize sending queries to Storage services within the same Zone. In the event of a read failure within that Zone, the behavior depends on the value of `spec.graphd.config.stick_to_intra_zone_on_failure`. If set to `true`, the Graph service avoids reading data from other Zones and returns an error. Otherwise, it reads data from leader partition replicas in other Zones.
+
+            ```yaml
+            spec:
+              alpineImage: reg.vesoft-inc.com/cloud-dev/nebula-alpine:latest
+              graphd:
+                config:
+                  prioritize_intra_zone_reading: "true"
+                  stick_to_intra_zone_on_failure: "true"
+            ```
+
+            **Zone Mapping for Resilience**
+
+            Once Storage and Graph services are assigned to Zones, the mapping between the pod and its corresponding Zone is stored in a configmap named `nebula-graphd|storaged-zone`. This mapping facilitates pod scheduling during rolling updates and pod restarts, ensuring that services return to their original Zones as needed.      
+
+
+        ??? info "Expand to view part of the sample cluster configurations"
+
+            ```yaml
+            apiVersion: apps.nebula-graph.io/v1alpha1
+            kind: NebulaCluster
+            metadata:
+              name: nebula
+              namespace: default
+            spec:
+              # Alpine image built with Linux tools.
+              alpineImage: "reg.vesoft-inc.com/nebula-alpine:latest"
+              graphd:
+                config:
+                  ## Prioritize sending queries to the storage nodes in the same zone.
+                  prioritize_intra_zone_reading: "true"
+                  # Stick to intra-zone routing if unable to
+                  # find the requested part in the zone when set to true.
+                  stick_to_intra_zone_on_failure: "true"
+                resources:
+                  requests:
+                    cpu: "200m"
+                    memory: "500Mi"
+                  limits:
+                    cpu: "1"
+                    memory: "1Gi"
+                logVolumeClaim:
+                  resources:
+                    requests:
+                      storage: 1Gi
+                  storageClassName: local-path
+                replicas: 1
+                image: reg.vesoft-inc.com/nebula-graphd-ent
+                version: v3.5.0
+              metad:
+                config:
+                  # A list of zones (e.g., AZ) split by comma
+                  zone_list: az1,az2,az3
+                licenseManagerURL: "192.168.8.53:9119"
+                resources:
+                  requests:
+                    cpu: "300m"
+                    memory: "500Mi"
+                  limits:
+                    cpu: "1"
+                    memory: "1Gi"
+                replicas: 1
+                image: reg.vesoft-inc.com/nebula-metad-ent
+                version: v3.5.0
+                dataVolumeClaim:
+                  resources:
+                    requests:
+                      storage: 2Gi
+                  storageClassName: local-path
+                logVolumeClaim:
+                  resources:
+                    requests:
+                      storage: 1Gi
+                  storageClassName: local-path
+            ```
+
 
     Other optional parameters for the enterprise edition are as follows:
 
