--- a/docs-2.0/nebula-operator/3.deploy-nebula-graph-cluster/3.2create-cluster-with-helm.md
+++ b/docs-2.0/nebula-operator/3.deploy-nebula-graph-cluster/3.2create-cluster-with-helm.md
@@ -70,34 +70,64 @@
       --set nebula.version=v{{nebula.release}} \  
       # Specify the version of the nebula-cluster chart. If not specified, the latest version of the chart is installed by default.  
       # Run 'helm search repo nebula-operator/nebula-cluster' to view the available versions of the chart.   
-      --version={{operator.release}} 
+      --version={{operator.release}} \
       --namespace="${NEBULA_CLUSTER_NAMESPACE}" \
   ```
 
   {{ent.ent_begin}}
-  !!! enterpriseonly
 
-        For NebulaGraph Enterprise, run the following command to create a NebulaGraph cluster:
-        
-        ```bash
-        helm install "${NEBULA_CLUSTER_NAME}" nebula-operator/nebula-cluster \
-            # Configure the access address and port (default port is '9119') that points to the LM. You must configure this parameter in order to obtain the license information. Only for NebulaGraph Enterprise Edition clusters.
-            --set nebula.metad.licenseManagerURL=`192.168.8.XXX:9119` \
-            # Configure the image addresses for each service in the cluster.
-            --set nebula.graphd.image=<reg.example-inc.com/test/graphd-ent> \
-            --set nebula.metad.image=<reg.example-inc.com/test/metad-ent> \
-            --set nebula.storaged.image=<reg.example-inc.com/test/storaged-ent> \
-            # Configure the Secret for pulling images from a private repository.
-            --set nebula.imagePullSecrets=<image-pull-secret> \
-            --set nameOverride=${NEBULA_CLUSTER_NAME} \
-            --set nebula.storageClassName="${STORAGE_CLASS_NAME}" \
-            # Specify the version of the NebulaGraph cluster. 
-            --set nebula.version=v{{nebula.release}} \  
-            # Specify the version of the nebula-cluster chart. If not specified, the latest version of the chart is installed by default.
-            # Run 'helm search repo nebula-operator/nebula-cluster' to view the available versions of the chart.     
-            --version={{operator.release}} 
-            --namespace="${NEBULA_CLUSTER_NAMESPACE}" \
-        ```
+  To create a NebulaGraph cluster for Enterprise Edition, run the following command:
+
+  === "Cluster without Zones"
+
+      ```bash
+      helm install "${NEBULA_CLUSTER_NAME}" nebula-operator/nebula-cluster \
+          # Configure the access address and port (default port is '9119') that points to the LM. You must configure this parameter in order to obtain the license information. Only for NebulaGraph Enterprise Edition clusters.
+          --set nebula.metad.licenseManagerURL=`192.168.8.XXX:9119` \
+          # Configure the image addresses for each service in the cluster.
+          --set nebula.graphd.image=<reg.example-inc.com/test/graphd-ent> \
+          --set nebula.metad.image=<reg.example-inc.com/test/metad-ent> \
+          --set nebula.storaged.image=<reg.example-inc.com/test/storaged-ent> \
+          # Configure the Secret for pulling images from a private repository.
+          --set nebula.imagePullSecrets=<image-pull-secret> \
+          --set nameOverride=${NEBULA_CLUSTER_NAME} \
+          --set nebula.storageClassName="${STORAGE_CLASS_NAME}" \
+          # Specify the version of the NebulaGraph cluster. 
+          --set nebula.version=v{{nebula.release}} \  
+          # Specify the version of the nebula-cluster chart. If not specified, the latest version of the chart is installed by default.
+          # Run 'helm search repo nebula-operator/nebula-cluster' to view the available versions of the chart.     
+          --version={{operator.release}} \
+          --namespace="${NEBULA_CLUSTER_NAMESPACE}" \
+      ```
+
+  === "Cluster with Zones"
+
+      NebulaGraph Operator supports the [Zones](../../4.deployment-and-installation/5.zone.md) feature. For how to use Zones in NebulaGraph Operator, see [Learn more about Zones in NebulaGraph Operator](3.1create-cluster-with-kubectl.md)
+
+      ```bash
+      helm install "${NEBULA_CLUSTER_NAME}" nebula-operator/nebula-cluster \
+          # Configure the access address and port (default port is '9119') that points to the LM. You must configure this parameter in order to obtain the license information. Only for NebulaGraph Enterprise Edition clusters.
+          --set nebula.metad.licenseManagerURL=`192.168.8.XXX:9119` \
+          # Configure the image addresses for each service in the cluster.
+          --set nebula.graphd.image=<reg.example-inc.com/test/graphd-ent> \
+          --set nebula.metad.image=<reg.example-inc.com/test/metad-ent> \
+          --set nebula.storaged.image=<reg.example-inc.com/test/storaged-ent> \
+          # Configure the Secret for pulling images from a private repository.
+          --set nebula.imagePullSecrets=<image-pull-secret> \
+          --set nameOverride=${NEBULA_CLUSTER_NAME} \
+          --set nebula.storageClassName="${STORAGE_CLASS_NAME}" \
+          # Specify the version of the NebulaGraph cluster. 
+          --set nebula.version=v{{nebula.release}} \  
+          # Specify the version of the nebula-cluster chart. If not specified, the latest version of the chart is installed by default.
+          # Run 'helm search repo nebula-operator/nebula-cluster' to view the available versions of the chart.     
+          --version={{operator.release}} \
+          # Configure Zones
+          --set nebula.metad.config.zone_list=<zone1,zone2> \
+          --set nebula.graphd.config.prioritize_intra_zone_reading=true \
+          --set nebula.graphd.config.stick_to_intra_zone_on_failure=true \
+          --namespace="${NEBULA_CLUSTER_NAMESPACE}" \
+      ```      
+
   {{ent.ent_end}}
 
 
@@ -108,7 +138,7 @@
   Use the `--set` argument to set configuration parameters for the cluster. For example, `--set nebula.storaged.replicas=3` will set the number of replicas for the Storage service in the cluster to 3.
 
 
-7. Check the status of the NebulaGraph cluster you created.
+1. Check the status of the NebulaGraph cluster you created.
    
   ```bash
   kubectl -n "${NEBULA_CLUSTER_NAMESPACE}" get pod -l "app.kubernetes.io/cluster=${NEBULA_CLUSTER_NAME}"
