updates nebula-consle & mtls & fix comments

--- a/docs-2.0/nebula-operator/3.deploy-nebula-graph-cluster/3.2create-cluster-with-helm.md
+++ b/docs-2.0/nebula-operator/3.deploy-nebula-graph-cluster/3.2create-cluster-with-helm.md
@@ -122,14 +122,15 @@
           # Run 'helm search repo nebula-operator/nebula-cluster' to view the available versions of the chart.     
           --version={{operator.release}} \
           # Configure Zones
-          --set nebula.metad.config.zone_list=<zone1,zone2> \
+          # Once Zones are configured, the Zone information cannot be modified. 
+          # It's suggested to configure an odd number of Zones.
+          --set nebula.metad.config.zone_list=<zone1,zone2,zone3> \
           --set nebula.graphd.config.prioritize_intra_zone_reading=true \
-          --set nebula.graphd.config.stick_to_intra_zone_on_failure=true \
+          --set nebula.graphd.config.stick_to_intra_zone_on_failure=false \
           --namespace="${NEBULA_CLUSTER_NAMESPACE}" \
       ```      
 
   {{ent.ent_end}}
-
 
   To view all configuration parameters of the NebulaGraph cluster, run the `helm show values nebula-operator/nebula-cluster` command or click [nebula-cluster/values.yaml](https://github.com/vesoft-inc/nebula-operator/blob/{{operator.branch}}/charts/nebula-cluster/values.yaml).
 
