--- a/docs-2.0/nebula-operator/3.deploy-nebula-graph-cluster/3.1create-cluster-with-kubectl.md
+++ b/docs-2.0/nebula-operator/3.deploy-nebula-graph-cluster/3.1create-cluster-with-kubectl.md
@@ -58,6 +58,7 @@ The following example shows how to create a NebulaGraph cluster by creating a cl
         | Parameter    | Default value  | Description    |
         | :---- | :--- | :--- |
         | `metadata.name`              | -                                                            | The name of the created NebulaGraph cluster. |
+        |`spec.console`|-| Configuration of the Console service. For details, see [nebula-console](https://github.com/vesoft-inc/nebula-operator/blob/v{{operator.release}}/doc/user/nebula_console.md#nebula-console).|
         | `spec.graphd.replicas`       | `1`                                                          | The numeric value of replicas of the Graphd service.         |
         | `spec.graphd.image`         | `vesoft/nebula-graphd`                                       | The container image of the Graphd service.      |
         | `spec.graphd.version`        | `{{nebula.tag}}`                                          | The version of the Graphd service.         |
@@ -116,15 +117,15 @@ The following example shows how to create a NebulaGraph cluster by creating a cl
         |`spec.<graphd|metad|storaged>.image`|-|The container image of the Graph, Meta, or Storage service of the enterprise edition.|
         |`spec.imagePullSecrets`| - |Specifies the Secret for pulling the NebulaGraph Enterprise service images from a private repository.|
         |`spec.alpineImage`|`reg.vesoft-inc.com/nebula-alpine:latest`|The Alpine Linux image, used to obtain the Zone information where nodes are located.| 
-        |`spec.metad.config.zone_list`|-|A list of zone names, split by comma.|
+        |`spec.metad.config.zone_list`|-|A list of zone names, split by comma. For example: zone1,zone2,zone3. <br/>**Zone names CANNOT be modified once be set.**|
         |`spec.graphd.config.prioritize_intra_zone_reading`|`false`|Specifies whether to prioritize sending queries to the storage nodes in the same zone.<br/>When set to `true`, the query is sent to the storage nodes in the same zone. If reading fails in that Zone, it will decide based on `stick_to_intra_zone_on_failure` whether to read the leader partition replica data from other Zones. |
-        |`spec.graphd.config.stick_to_intra_zone_on_failure`|`false`|Specifies whether to stick to intra-zone routing if unable to read the requested partitions in the same zone. When set to `true`, if reading fails in that Zone, it does not read data from other Zones.|
+        |`spec.graphd.config.stick_to_intra_zone_on_failure`|`false`|Specifies whether to stick to intra-zone routing if unable to find the requested partitions in the same zone. When set to `true`, if unable to find the partition replica in that Zone, it does not read data from other Zones.|
 
         ???+ note "Learn more about Zones in NebulaGraph Operator"
 
             **Understanding NebulaGraph's Zone Feature**
 
-            NebulaGraph utilizes a feature called Zones to efficiently manage its distributed architecture. Each Zone represents a logical grouping of Storage pods and Graph pods, responsible for storing the complete graph space data. The data within NebulaGraph's spaces is partitioned, and replicas of these partitions are evenly distributed across all available Zones. The utilization of Zones can significantly reduce inter-Zone network traffic costs and boost data transfer speeds.
+            NebulaGraph utilizes a feature called Zones to efficiently manage its distributed architecture. Each Zone represents a logical grouping of Storage pods and Graph pods, responsible for storing the complete graph space data. The data within NebulaGraph's spaces is partitioned, and replicas of these partitions are evenly distributed across all available Zones. The utilization of Zones can significantly reduce inter-Zone network traffic costs and boost data transfer speeds. Moreover, intra-zone-reading allows for increased availability, because replicas of a partition spread out among different zones.
 
             **Configuring NebulaGraph Zones**
 
@@ -153,15 +154,28 @@ The following example shows how to create a NebulaGraph cluster by creating a cl
               graphd:
                 config:
                   prioritize_intra_zone_reading: "true"
-                  stick_to_intra_zone_on_failure: "true"
+                  stick_to_intra_zone_on_failure: "false"
             ```
 
             **Zone Mapping for Resilience**
 
-            Once Storage and Graph services are assigned to Zones, the mapping between the pod and its corresponding Zone is stored in a configmap named `nebula-graphd|storaged-zone`. This mapping facilitates pod scheduling during rolling updates and pod restarts, ensuring that services return to their original Zones as needed.      
+            Once Storage and Graph services are assigned to Zones, the mapping between the pod and its corresponding Zone is stored in a configmap named `<cluster_name>-graphd|storaged-zone`. This mapping facilitates pod scheduling during rolling updates and pod restarts, ensuring that services return to their original Zones as needed.    
+
+            !!! caution
+
+                DO NOT manually modify the configmaps created by NebulaGraph Operator. Doing so may cause unexpected behavior.  
 
 
-        ??? info "Expand to view part of the sample cluster configurations"
+        Other optional parameters for the enterprise edition are as follows:
+
+        | Parameter    | Default value  | Description    |
+        | :---- | :--- | :--- |
+        |`spec.storaged.enableAutoBalance`| `false`| Specifies whether to enable automatic data balancing. For more information, see [Balance storage data after scaling out](../8.custom-cluster-configurations/8.3.balance-data-when-scaling-storage.md).|
+        |`spec.enableBR`|`false`|Specifies whether to enable the BR tool. For more information, see [Backup and restore](../10.backup-restore-using-operator.md).|
+        |`spec.graphd.enable_graph_ssl`|`false`| Specifies whether to enable SSL for the Graph service. For more details, see [Enable mTLS](../8.custom-cluster-configurations/8.5.enable-ssl.md). |
+
+
+        ??? info "Expand to view sample cluster configurations"
 
             ```yaml
             apiVersion: apps.nebula-graph.io/v1alpha1
@@ -170,35 +184,110 @@ The following example shows how to create a NebulaGraph cluster by creating a cl
               name: nebula
               namespace: default
             spec:
-              # Alpine image built with Linux tools.
-              alpineImage: "reg.vesoft-inc.com/nebula-alpine:latest"
+              alpineImage: "reg.vesoft-inc.com/cloud-dev/nebula-alpine:latest"
+              agent:
+                image: reg.vesoft-inc.com/cloud-dev/nebula-agent
+                version: v3.6.0-sc
+              exporter:
+                image: vesoft/nebula-stats-exporter
+                replicas: 1
+                maxRequests: 20
+              console:
+                version: "nightly"
               graphd:
                 config:
-                  ## Prioritize sending queries to the storage nodes in the same zone.
-                  prioritize_intra_zone_reading: "true"
-                  # Stick to intra-zone routing if unable to
-                  # find the requested part in the zone when set to true.
-                  stick_to_intra_zone_on_failure: "true"
+                  accept_partial_success: "true"
+                  ca_client_path: certs/root.crt
+                  ca_path: certs/root.crt
+                  cert_path: certs/server.crt
+                  key_path: certs/server.key
+                  enable_graph_ssl: "true"
+                  enable_intra_zone_reading: "true"
+                  stick_to_intra_zone_on_failure: "true" 
+                  logtostderr: "1"
+                  redirect_stdout: "false"
+                  stderrthreshold: "0" 
+                  enable_graph_ssl: "true"
+                initContainers:
+                  - name: init-auth-sidecar
+                    imagePullPolicy: IfNotPresent
+                    image: 496756745489.dkr.ecr.us-east-1.amazonaws.com/auth-sidecar:v1.60.0
+                    env:
+                      - name: AUTH_SIDECAR_CONFIG_FILENAME
+                        value: sidecar-init
+                    volumeMounts:
+                      - name: credentials 
+                        mountPath: /credentials 
+                      - name: auth-sidecar-config 
+                        mountPath: /etc/config 
+                sidecarContainers:
+                  - name: auth-sidecar
+                    image: 496756745489.dkr.ecr.us-east-1.amazonaws.com/auth-sidecar:v1.60.0
+                    imagePullPolicy: IfNotPresent
+                    resources:
+                      requests:
+                        cpu: 100m
+                        memory: 500Mi
+                    env:
+                      - name: LOCAL_POD_IP
+                        valueFrom:
+                          fieldRef:
+                            fieldPath: status.podIP
+                      - name: LOCAL_POD_NAME
+                        valueFrom:
+                          fieldRef:
+                            fieldPath: metadata.name
+                      - name: LOCAL_POD_NAMESPACE
+                        valueFrom:
+                          fieldRef:
+                            fieldPath: metadata.namespace
+                    readinessProbe:
+                      httpGet:
+                        path: /ready
+                        port: 8086
+                      initialDelaySeconds: 5
+                      periodSeconds: 10
+                      successThreshold: 1
+                      failureThreshold: 3
+                    livenessProbe:
+                      httpGet:
+                        path: /live
+                        port: 8086
+                      initialDelaySeconds: 5
+                      periodSeconds: 10
+                      successThreshold: 1
+                      failureThreshold: 3
+                    volumeMounts:
+                      - name: credentials 
+                        mountPath: /credentials 
+                      - name: auth-sidecar-config 
+                        mountPath: /etc/config 
+                volumes: 
+                  - name: credentials
+                    emptyDir:
+                      medium: Memory
+                volumeMounts: 
+                  - name: credentials
+                    mountPath: /usr/local/nebula/certs
                 resources:
                   requests:
-                    cpu: "200m"
-                    memory: "500Mi"
+                    cpu: "2"
+                    memory: "2Gi"
                   limits:
-                    cpu: "1"
-                    memory: "1Gi"
-                logVolumeClaim:
-                  resources:
-                    requests:
-                      storage: 1Gi
-                  storageClassName: local-path
+                    cpu: "2"
+                    memory: "2Gi"
                 replicas: 1
-                image: reg.vesoft-inc.com/nebula-graphd-ent
-                version: v3.5.0
+                image: reg.vesoft-inc.com/rc/nebula-graphd-ent
+                version: v3.5.0-sc
               metad:
                 config:
-                  # A list of zones (e.g., AZ) split by comma
-                  zone_list: az1,az2,az3
-                licenseManagerURL: "192.168.8.53:9119"
+                  redirect_stdout: "false"
+                  stderrthreshold: "0"
+                  logtostder: "true"
+                  # Zone names CANNOT be modified once set.
+                  # It's suggested to set an odd number of Zones.
+                  zone_list: az1,az2,az3 
+                licenseManagerURL: "192.168.8.xxx:9119"
                 resources:
                   requests:
                     cpu: "300m"
@@ -206,30 +295,48 @@ The following example shows how to create a NebulaGraph cluster by creating a cl
                   limits:
                     cpu: "1"
                     memory: "1Gi"
-                replicas: 1
-                image: reg.vesoft-inc.com/nebula-metad-ent
-                version: v3.5.0
+                replicas: 3
+                image: reg.vesoft-inc.com/rc/nebula-metad-ent
+                version: v3.5.0-sc
                 dataVolumeClaim:
                   resources:
                     requests:
                       storage: 2Gi
                   storageClassName: local-path
-                logVolumeClaim:
-                  resources:
+              storaged:
+                config:
+                  redirect_stdout: "false"
+                  stderrthreshold: "0"
+                  logtostder: "true"
+                resources:
+                  requests:
+                    cpu: "1"
+                    memory: "1Gi"
+                  limits:
+                    cpu: "2"
+                    memory: "2Gi"
+                replicas: 3
+                image: reg.vesoft-inc.com/rc/nebula-storaged-ent
+                version: v3.5.0-sc
+                dataVolumeClaims:
+                - resources:
                     requests:
-                      storage: 1Gi
+                      storage: 2Gi
                   storageClassName: local-path
+                enableAutoBalance: true
+              reference:
+                name: statefulsets.apps
+                version: v1
+              schedulerName: nebula-scheduler
+              nodeSelector:
+                nebula: cloud
+              imagePullPolicy: Always
+              imagePullSecrets:
+              - name: nebula-image
+              topologySpreadConstraints:
+              - topologyKey: "topology.kubernetes.io/zone"
+                whenUnsatisfiable: "DoNotSchedule"
             ```
-
-
-    Other optional parameters for the enterprise edition are as follows:
-
-    | Parameter    | Default value  | Description    |
-    | :---- | :--- | :--- |
-    |`spec.storaged.enableAutoBalance`| `false`| Specifies whether to enable automatic data balancing. For more information, see [Balance storage data after scaling out](../8.custom-cluster-configurations/8.3.balance-data-when-scaling-storage.md).|
-    |`spec.enableBR`|`false`|Specifies whether to enable the BR tool. For more information, see [Backup and restore](../10.backup-restore-using-operator.md).|
-
-
 
   {{ ent.ent_end }}
 
