--- a/docs-2.0/nebula-operator/8.custom-cluster-configurations/8.5.enable-ssl.md
+++ b/docs-2.0/nebula-operator/8.custom-cluster-configurations/8.5.enable-ssl.md
@@ -239,11 +239,7 @@ For the configurations of the other two authentication policies:
 
 ### Configure `initContainers`, `sidecarContainers`, `volumes`, and `volumeMounts`
 
-`initContainers`, `sidecarContainers`, `volumes`, and `volumeMounts` fields are essential for implementing mTLS certificate online hot-reloading.
-
-- For the encryption scenario where only the Graph service needs to be encrypted, you need to configure `initContainers`, `sidecarContainers`, `volumes`, and `volumeMounts` under `spec.graph.config`. 
-
-- For the other two scenarios where the Graph service, Meta service, and Storage service need to be encrypted, and where only the Meta service needs to be encrypted, you need to configure `initContainers`, `sidecarContainers`, `volumes`, and `volumeMounts` under `spec.graph.config`, `spec.storage.config`, and `spec.meta.config`.
+`initContainers`, `sidecarContainers`, `volumes`, and `volumeMounts` fields are essential for implementing mTLS certificate online hot-reloading. For the encryption scenario where only the Graph service needs to be encrypted, you need to configure `initContainers`, `sidecarContainers`, `volumes`, and `volumeMounts` under `spec.graph.config`. 
 
 #### `initContainers`
 
@@ -310,8 +306,19 @@ volumeMounts:
 - name: credentials
   mountPath: /usr/local/nebula/certs
 ```
+### Configure `sslCerts`
 
-#### `insecureSkipVerify`
+For the other two scenarios where the Graph service, Meta service, and Storage service need to be encrypted, and where only the Meta service needs to be encrypted, you not only need to configure `initContainers`, `sidecarContainers`, `volumes`, and `volumeMounts` under `spec.graph.config`, `spec.storage.config`, and `spec.meta.config`, but also configure `spec.sslCerts`. 
+
+The `spec.sslCerts` field specifies the encrypted certificates for NebulaGraph Operator.
+
+```yaml
+spec:
+  sslCerts:
+    clientSecret: "client-cert"
+    caSecret: "ca-cert" # The Secret name of the CA certificate.
+    caCert: "root.crt"
+```
 
 The `insecureSkipVerify` field is used to determine whether the client will verify the server's certificate chain and hostname. In production environments, it is recommended to set this to `false` to ensure the security of communication. If set to `true`, the client will not verify the server's certificate chain and hostname.
 
@@ -334,8 +341,17 @@ After applying the cluster configuration file by running `kubectl apply -f`, you
 
     When mTLS is required for external clients to connect to the Graph service, you need to set the relevant SSL fields depending on different [clients](../../14.client/1.nebula-client.md). 
 
+You can configure `spec.console` to start a NebulaGraph Console container in the cluster. For details, see [nebula-console](https://github.com/vesoft-inc/nebula-operator/blob/v{{operator.release}}/doc/user/nebula_console.md#nebula-console).
+
+```yaml
+spec:
+  console:
+    version: "nightly"
+```
+Then enter the console container and run the following command to connect to the Graph service.
+
 ```bash
-nebula-console -addr nebula-graphd-svc.default.svc.cluster.local   -port 9669 -u root  -p nebula -enable_ssl -ssl_root_ca_path /home/xxx/cert/root.crt -ssl_cert_path /home/xxx/cert/client.crt -ssl_private_key_path /home/xxx/cert/client.key
+nebula-console -addr nebula-graphd-svc.default.svc.cluster.local -port 9669 -u root  -p nebula -enable_ssl -ssl_root_ca_path /home/xxx/cert/root.crt -ssl_cert_path /home/xxx/cert/client.crt -ssl_private_key_path /home/xxx/cert/client.key
 ```
 
 ## mTLS without hot-reloading
