--- a/docs-2.0/nebula-operator/8.custom-cluster-configurations/8.5.enable-ssl.md
+++ b/docs-2.0/nebula-operator/8.custom-cluster-configurations/8.5.enable-ssl.md
@@ -384,10 +384,12 @@ nebula-console -addr nebula-graphd-svc.default.svc.cluster.local -port 9669 -u r
 
     ### Configure certifications
 
-    Operator provides the `sslCerts` field to specify the encrypted certificates. The `sslCerts` field contains three subfields: `serverSecret`, `clientSecret`, and `caSecret`. These three fields are used to specify the Secret names of the NebulaGraph server certificate, client certificate, and CA certificate, respectively. When you specify these three fields, Operator reads the certificate content from the corresponding Secret and mounts it into the cluster's Pod.
+    Operator provides the `sslCerts` field to specify the encrypted certificates. The `sslCerts` field contains four subfields. These three fields `serverSecret`, `clientSecret`, and `caSecret` are used to specify the Secret names of the NebulaGraph server certificate, client certificate, and CA certificate, respectively. 
+    When you specify these three fields, Operator reads the certificate content from the corresponding Secret and mounts it into the cluster's Pod. The `autoMountServerCerts` must be set to `true` if you want to automatically mount the server certificate and private key into the Pod. The default value is `false`.
 
     ```yaml
     sslCerts:
+    autoMountServerCerts: "true"    # Automatically mount the server certificate and private key into the Pod.
     serverSecret: "server-cert"     # The name of the server certificate Secret.
     serverCert: ""                  # The key name of the certificate in the server certificate Secret, default is tls.crt.
     serverKey: ""                   # The key name of the private key in the server certificate Secret, default is tls.key.
@@ -432,6 +434,7 @@ nebula-console -addr nebula-graphd-svc.default.svc.cluster.local -port 9669 -u r
         namespace: default
       spec:
         sslCerts:
+          autoMountServerCerts: "true"  # Automatically mount the server certificate and private key into the Pod.
           serverSecret: "server-cert"   # The Secret name of the server certificate and private key.
           clientSecret: "client-cert"   # The Secret name of the client certificate and private key.
           caSecret: "ca-cert"           # The Secret name of the CA certificate.
@@ -461,6 +464,7 @@ nebula-console -addr nebula-graphd-svc.default.svc.cluster.local -port 9669 -u r
         namespace: default
       spec:
         sslCerts:
+          autoMountServerCerts: "true"  
           serverSecret: "server-cert"
           caSecret: "ca-cert"
         graphd:
@@ -486,6 +490,7 @@ nebula-console -addr nebula-graphd-svc.default.svc.cluster.local -port 9669 -u r
         namespace: default
       spec:
         sslCerts:
+          autoMountServerCerts: "true"
           serverSecret: "server-cert"
           clientSecret: "client-cert"
           caSecret: "ca-cert"
@@ -528,6 +533,7 @@ nebula-console -addr nebula-graphd-svc.default.svc.cluster.local -port 9669 -u r
         namespace: default
       spec:
         sslCerts:
+          autoMountServerCerts: "true"
           serverSecret: "server-cert"  // The name of the server Certificate Secret.
           clientSecret: "client-cert"  // The name of the client Certificate Secret.
           caSecret: "ca-cert"          // The name of the CA Certificate Secret.
@@ -562,6 +568,7 @@ nebula-console -addr nebula-graphd-svc.default.svc.cluster.local -port 9669 -u r
       ...
       spec:
         sslCerts:
+          autoMountServerCerts: "true"
           serverSecret: server-cert
           serverCert: tls.crt
           serverKey: tls.key
