--- a/docs-2.0/nebula-operator/10.backup-restore-using-operator.md
+++ b/docs-2.0/nebula-operator/10.backup-restore-using-operator.md
@@ -6,6 +6,10 @@ This article introduces how to back up and restore data of the NebulaGraph clust
 
     This feature is only for the enterprise edition NebulaGraph clusters on Kubernetes.
 
+!!! compatibility 
+
+    Make sure that the [Zone](../4.deployment-and-installation/5.zone.md) feature is not enabled in the NebulaGraph cluster before using the backup and restore in Operator, otherwise the backup and restore will fail. For details on Zones, see [Cluster with Zones](3.deploy-nebula-graph-cluster/3.1create-cluster-with-kubectl.md#create_clusters).
+
 ## Overview
 
 [NebulaGraph BR (Enterprise Edition), short for BR-ent](../backup-and-restore/nebula-br-ent/1.br-ent-overview.md) is a command line tool for data backup and recovery of NebulaGraph enterprise edition. NebulaGraph Operator utilizes the BR-ent tool to achieve data backup and recovery for NebulaGraph clusters on Kubernetes.
@@ -13,7 +17,6 @@ This article introduces how to back up and restore data of the NebulaGraph clust
 When backing up data, NebulaGraph Operator creates a job to back up the data in the NebulaGraph cluster to the specified storage service.
 
 When restoring data, NebulaGraph Operator checks the specified backup NebulaGraph cluster for existence, and whether the access to remote storage is normally based on the information defined in the NebulaRestore resource object. It then creates a new cluster and restores the backup data to the new NebulaGraph cluster. For more information, see [restore flowchart](https://github.com/vesoft-inc/nebula-operator/blob/v{{operator.release}}/doc/user/br_guide.md#restore-nebulagraph-cluster).
-
 
 ## Prerequisites
 
