--- a/docs-2.0/4.deployment-and-installation/5.zone.md
+++ b/docs-2.0/4.deployment-and-installation/5.zone.md
@@ -76,7 +76,7 @@ In cases where data retrieval fails due to a Storage node failure in a specific 
         - The value of `--assigned_zone` is a string and does not support English commas (,).
         - When `--assigned_zone` is empty, it means reading from leader replicas.
   
-  2. Set `--prioritize_intra_zone_reading` to `true` to prioritize intra zone data reading. When there is no data in the Zone specified by `--assigned_zone`, an error occurs depending on the value of `stick_to_intra_zone_on_failure`. 
+  2. Set `--prioritize_intra_zone_reading` to `true` to prioritize intra zone data reading. When reading fails in the Zone specified by `--assigned_zone`, an error occurs depending on the value of `stick_to_intra_zone_on_failure`. 
 
     !!! caution
 
