--- a/docs-2.0/4.deployment-and-installation/5.zone.md
+++ b/docs-2.0/4.deployment-and-installation/5.zone.md
@@ -40,7 +40,7 @@ In cases where data retrieval fails due to a Storage node failure in a specific 
 - Before enabling the Zone feature, clear any existing data in the cluster. See **Enabling Zone** for details.
 - Each Storage node must belong to one, and only one, Zone. However, a Zone can have multiple Storage nodes. Storage nodes should outnumber or equal Zones.
 - The number of Zones must equal the number of partition replicas; otherwise, the graph space cannot be created.
-- The number of Zones is recommended to be odd and must equal the number of partition replicas.
+- The number of Zones is recommended to be odd.
 - Adjusting the number of Zones isn't allowed.
 - Zone name modifications are unsupported.
 
